--- a/src/.deps/jiayuan_dbproxy-messages.Po
+++ b/src/.deps/jiayuan_dbproxy-messages.Po
@@ -1,4 +1,4 @@
-jiayuan_dbproxy-messages.o: messages.cpp /usr/include/stdc-predef.h \
+xxfs_dbproxy-messages.o: messages.cpp /usr/include/stdc-predef.h \
  /usr/lib/gcc/x86_64-linux-gnu/4.8/include/stdarg.h /usr/include/stdio.h \
  /usr/include/features.h /usr/include/x86_64-linux-gnu/sys/cdefs.h \
  /usr/include/x86_64-linux-gnu/bits/wordsize.h \
