--- a/src/.deps/jiayuan_dbproxy-glib-ext.Po
+++ b/src/.deps/jiayuan_dbproxy-glib-ext.Po
@@ -1,4 +1,4 @@
-jiayuan_dbproxy-glib-ext.o: glib-ext.cpp /usr/include/stdc-predef.h \
+xxfs_dbproxy-glib-ext.o: glib-ext.cpp /usr/include/stdc-predef.h \
  /usr/include/glib-2.0/glib.h /usr/include/glib-2.0/glib/galloca.h \
  /usr/include/glib-2.0/glib/gtypes.h \
  /usr/lib/x86_64-linux-gnu/glib-2.0/include/glibconfig.h \
