--- a/src/.deps/jiayuan_dbproxy-partition.Po
+++ b/src/.deps/jiayuan_dbproxy-partition.Po
@@ -1,4 +1,4 @@
-jiayuan_dbproxy-partition.o: partition.cpp /usr/include/stdc-predef.h \
+xxfs_dbproxy-partition.o: partition.cpp /usr/include/stdc-predef.h \
  /usr/include/stdlib.h /usr/include/features.h \
  /usr/include/x86_64-linux-gnu/sys/cdefs.h \
  /usr/include/x86_64-linux-gnu/bits/wordsize.h \
